Prevent project card stretching

--- a/style.css
+++ b/style.css
@@ -212,6 +212,7 @@ img {
 
 .main .project-list {
     display: grid;
+    align-content: start;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
     flex: 1;
